compiler/testData/diagnostics/tests/cast/bare/UnrelatedIs.fir.kt
interface Tr
interface G<T>

fun test(tr: Tr) = tr is <!WRONG_NUMBER_OF_TYPE_ARGUMENTS!>G<!>